--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "@types/chai": "^4.1.3",
     "@types/mocha": "^5.2.0",
     "@types/node": "^9.6.6",
+    "bson": "^1.0.9",
     "chai": "^4.1.2",
-    "coveralls": "^3.0.0",
     "cross-env": "^5.1.6",
     "mocha": "^5.1.1",
-    "replace-in-file": "^3.4.0",
+    "msgpack": "^1.0.2",
     "ts-node": "^5.0.1",
     "tslint": "^5.9.1",
     "typescript": "^2.8.3"
