--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   },
   "license": "Apache-2.0",
   "main": "dist/index.js",
-  "dependencies": {},
+  "dependencies": {
+    "base64-js": "^1.3.0"
+  },
   "devDependencies": {
+    "@types/base64-js": "^1.2.5",
     "@types/chai": "^4.1.3",
     "@types/mocha": "^5.2.0",
     "@types/node": "^9.6.6",
@@ -21,7 +24,7 @@
     "chai": "^4.1.2",
     "cross-env": "^5.1.6",
     "mocha": "^5.1.1",
-    "msgpack": "^1.0.2",
+    "msgpack-lite": "^0.1.26",
     "ts-node": "^5.0.1",
     "tslint": "^5.9.1",
     "typescript": "^2.8.3"
