--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/chai": "^4.1.3",
     "@types/mocha": "^5.2.0",
     "@types/node": "^9.6.6",
+    "base64-js": "^1.3.0",
     "bson": "^1.0.9",
     "chai": "^4.1.2",
     "cross-env": "^5.1.6",
