--- a/package.json
+++ b/package.json
@@ -13,22 +13,22 @@
   "license": "Apache-2.0",
   "main": "dist/index.js",
   "devDependencies": {
-    "@babel/core": "^7.0.0-0",
-    "@babel/preset-env": "^7.4.5",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "@types/base64-js": "^1.2.5",
-    "@types/chai": "^4.1.3",
+    "@types/chai": "^4.2.1",
     "@types/mocha": "^5.2.7",
-    "@types/node": "^12.0.10",
-    "base64-js": "^1.3.0",
+    "@types/node": "^12.7.4",
+    "base64-js": "^1.3.1",
     "bson": "^4.0.2",
     "chai": "^4.1.2",
-    "cross-env": "^5.1.6",
-    "mocha": "^6.1.4",
+    "cross-env": "^5.2.1",
+    "mocha": "^6.2.0",
     "msgpack-lite": "^0.1.26",
     "parcel": "^1.12.3",
     "ts-node": "^8.3.0",
-    "tslint": "^5.18.0",
-    "typescript": "^3.5.2"
+    "tslint": "^5.19.0",
+    "typescript": "^3.6.2"
   },
   "scripts": {
     "test": "cross-env NODE_ENV=TEST mocha -r ts-node/register test/**/*.ts",
