--- a/.npmignore
+++ b/.npmignore
@@ -19,12 +19,19 @@ node_modules
 .nyc_output
 /.idea
 /.vscode
-/.base93
+/.github
+
+/.cache
 build
 /src/**/*.js
 *.js.map
+
 /temp
-/.cache
+/base93
 /test
 /benchmark
+/examples
+
 /yarn.lock
+/.travis.yml
+/.babelrc
