--- a/package.json
+++ b/package.json
@@ -13,22 +13,25 @@
   "license": "Apache-2.0",
   "main": "dist/index.js",
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
+    "@babel/core": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
     "@types/base64-js": "^1.2.5",
-    "@types/chai": "^4.2.9",
-    "@types/mocha": "^7.0.1",
-    "@types/node": "^13.7.4",
+    "@types/chai": "^4.2.11",
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^13.9.1",
     "base64-js": "^1.3.1",
     "bson": "^4.0.3",
     "chai": "^4.1.2",
-    "cross-env": "^7.0.0",
-    "mocha": "^7.0.1",
+    "cross-env": "^7.0.2",
+    "mocha": "^7.1.0",
     "msgpack-lite": "^0.1.26",
     "parcel": "^1.12.4",
     "ts-node": "^8.6.2",
-    "tslint": "^6.0.0",
-    "typescript": "^3.8.2"
+    "tslint": "^6.1.0",
+    "typescript": "^3.8.3"
+  },
+  "resolutions": {
+    "**/minimist": "^1.2.5"
   },
   "scripts": {
     "test": "cross-env NODE_ENV=TEST mocha -r ts-node/register test/**/*.ts",
