--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "typescript": "^4.0.3"
   },
   "resolutions": {
-    "**/minimist": "^1.2.5"
+    "**/minimist": "^1.2.5",
+    "**/node-forge": "^0.10.0"
   },
   "scripts": {
     "test": "cross-env NODE_ENV=TEST mocha -r ts-node/register test/**/*.ts",
