--- a/package.json
+++ b/package.json
@@ -13,29 +13,21 @@
   "license": "Apache-2.0",
   "main": "dist/index.js",
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/preset-env": "^7.12.1",
+    "@babel/core": "^7.19.3",
+    "@babel/preset-env": "^7.19.4",
     "@types/base64-js": "^1.3.0",
-    "@types/chai": "^4.2.14",
-    "@types/mocha": "^8.0.3",
-    "@types/node": "^14.14.2",
-    "base64-js": "^1.3.1",
-    "bson": "^4.2.0",
-    "chai": "^4.1.2",
-    "cross-env": "^7.0.2",
-    "mocha": "^8.2.0",
-    "msgpack-lite": "^0.1.26",
-    "parcel": "^1.12.4",
-    "ts-node": "^9.0.0",
+    "@types/chai": "^4.3.3",
+    "@types/mocha": "^10.0.0",
+    "@types/node": "^18.11.0",
+    "base64-js": "^1.5.1",
+    "chai": "^4.3.6",
+    "cross-env": "^7.0.3",
+    "mocha": "^10.1.0",
+    "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
-    "typescript": "^4.0.3"
-  },
-  "resolutions": {
-    "**/minimist": "^1.2.5",
-    "**/node-forge": "^0.10.0"
+    "typescript": "^4.8.4"
   },
   "scripts": {
-    "test": "cross-env NODE_ENV=TEST mocha -r ts-node/register test/**/*.ts",
-    "benchmark": "parcel build benchmark/benchmark.html --out-dir temp --no-source-maps"
+    "test": "cross-env NODE_ENV=TEST mocha -r ts-node/register test/**/*.ts"
   }
 }
