--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     ],
     "alwaysStrict": true,
     "noImplicitAny": true,
-    "sourceMap": true,
+    "sourceMap": false,
     "declaration": true,
     "outDir": "dist"
   },
